fix: errors deployment corrections and unit test